Fix overflowing save popup drop-down with long collection name in Firefox
https://forums.zotero.org/discussion/81766/odd-firefox-extension-look

--- a/src/common/progressWindow/progressWindow.css
+++ b/src/common/progressWindow/progressWindow.css
@@ -54,7 +54,9 @@ button:active {
 	height: 22px;
 	width: 100%;
 	font-size: 12px;
-	flex-grow: 1
+	flex-grow: 1;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .ProgressWindow-targetIcon {
